# cloudbuild-dagster

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yaml  daemon_dagit.Dockerfile  dagster_pipelines.Dockerfile  docker-compose-local.yml  pyproject.toml
.github/: pull_request_template.md
deploy/: compose.Dockerfile  docker-compose.yaml  entrypoint.sh
src/: dagster.yaml  repo.py  workspace.yaml
tests/: test_sample.py
