[tool.poetry]
name = "de-workflow-template"
version = "0.1.0"
description = "Workflow template for DE projects"
authors = []

[tool.poetry.dependencies]
python = "^3.6.1"
pre-commit = "^2.17.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
