[tool.poetry]
name = "cloudbuild-dagster-sample"
version = "0.1.0"
description = "Sample project using Cloud Build to continously deploy Dagster to GCP"
authors = []

[tool.poetry.dependencies]
python = "^3.8.1"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
dagster = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
